#16-CTS Quick fix customers API
