# api/swagger/swagger.yaml
@@ -36,7 +36,7 @@ paths:
     post:
       tags: ["customers"]
       summary: Create a new customer
-      operationId: create
+      operationId: createCustomer
       parameters:
         - name: username
           description: Can be anything you want
@@ -68,21 +68,11 @@ paths:
           in: formData
           required: true
           type: string
-        - name: country
-          description: Country of the new customer
+        - name: is_active
+          description: TRUE if customer is active, else FALSE
           in: formData
           required: true
-          type: string
-        - name: state
-          description: State of the new customer
-          in: formData
-          required: true
-          type: string
-        - name: phone
-          description: Phone of the new customer
-          in: formData
-          required: true
-          type: string
+          type: boolean
       responses:
         201:
           description: Created
